# notebook_chat_gui

./: Cargo.toml  README.md
.github/workflows/: c1.yml
src/: ai.rs  app.rs  logging.rs  main.rs  state.rs
