[package]
name = "notebook_chat_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
eframe = "0.33"
egui = "0.33"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

archeo = { git = "https://github.com/stela2502/archeo.git" }

